# AUTh-authenticator

./: .gitignore  README.md  __preHeaders__.py  main.py  setup.cfg  universis.py
src/AUTh_authenticator/: __preHeaders__.py  universis.py
