[metadata]
name = AUTh_authenticator
version = 0.5.0
author = Neron Panagiotopoulos
author_email = neronpanagiotopoulos@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Neron-png/AUTh-authenticator
project_urls =
    Bug Tracker = https://github.com/Neron-png/AUTh-authenticator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    beautifulsoup4 >= 4.12.2
    pkce >= 1.0.3

[options.packages.find]
where = src
